# Video-Download-Assistant-Rust-Edition

./: .gitignore  Cargo.toml  Uruchom serwer lokalny.bat  build.rs  build_all.ps1  start_server.py  temp.html
.github/workflows/: check-yt-dlp.yml  rust.yml  spk.yml  triger.yml
SPK_AP_TEMPLATE/: INFO
SPK_AP_TEMPLATE/pakiet/ui/: ui_info.json
SPK_AP_TEMPLATE/scripts/: postinst  postupgrade  preuninst  preupgrade  start-stop-status  ui_handler.sh
SPK_AP_TEMPLATE/ui/: styles.css  ui.html  ui_config.json  ui_manifest.json
old/: server.py
old/V2.0-rast z kolejką i wznawianiem KOD/: Cargo.toml
old/V2.0-rast z kolejką i wznawianiem KOD/src/: main.rs
plugin/: background.js  content.js  dialog.html  dialog.js  download.js  popup.css  popup.html  popup.js  settings.js
rast/: Cargo.toml  build_all.ps1
rast/src/: build.rs  main.rs
src/: api_handler.rs  main.rs
