[package]
name = "vda_server"
version = "0.2.0-kol-mod-rast"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dirs = "6.0.0"
reqwest = { version = "0.13.1", default-features = false}

